--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint",
     "prepare": "husky install",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.0",
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
@@ -38,11 +41,17 @@
     "@storybook/nextjs": "^7.3.2",
     "@storybook/react": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
     "autoprefixer": "^10.4.15",
     "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.0",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "postcss": "^8.4.28",
-    "storybook": "^7.3.2"
+    "storybook": "^7.3.2",
+    "ts-jest": "^29.1.1"
   },
   "overrides": {
     "enhanced-resolve": "5.10.0"
