--- a/.env
+++ b/.env
@@ -7,10 +7,12 @@
 DATABASE_URL="file:./dev.db"
 
 NEXTAUTH_SECRET=RATE_THIS_SECRET
-NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_SECRET=SOME_SECRETS
 
 GITHUB_ID=a0591a9045f1c3a1d00c
 GITHUB_SECRET=df10ce0e15073562edd82acfec293aa5aa08bc2c
 
 GOOGLE_CLIENT_ID=166047006080-fsk8ld2dl4kt2dgtutjqekcfl73mgkeu.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dhxmo8ypg"
