--- a/package.json
+++ b/package.json
@@ -16,27 +16,33 @@
     "postinstall": "npx prisma generate && npx prisma db push"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.2",
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.0",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@mdxeditor/editor": "^1.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@yaireo/tagify": "^4.17.9",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "next-cloudinary": "^4.22.0",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-tag-autocomplete": "^7.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
@@ -56,6 +62,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
+    "@types/yaireo__tagify": "^4.17.2",
     "autoprefixer": "^10.4.15",
     "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.0",
