--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mdxeditor/editor": "^1.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
-    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query": "^5.0.0-beta.31",
     "@tanstack/react-query-devtools": "^4.33.0",
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
