--- a/package.json
+++ b/package.json
@@ -22,18 +22,24 @@
     "@mdxeditor/editor": "^1.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
-    "@tanstack/react-query": "^5.0.0-beta.31",
+    "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-devtools": "^4.35.3",
+    "@tanstack/react-table": "^8.10.1",
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@yaireo/tagify": "^4.17.9",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.10",
+    "dompurify": "^3.0.5",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "marked": "^9.0.3",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-cloudinary": "^4.22.0",
+    "next-themes": "^0.2.1",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,6 +48,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-tag-autocomplete": "^7.1.0",
+    "remove-markdown": "^0.5.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
@@ -60,7 +67,10 @@
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/dompurify": "^3.0.3",
     "@types/jest": "^29.5.4",
+    "@types/marked": "^5.0.1",
+    "@types/remove-markdown": "^0.3.1",
     "@types/yaireo__tagify": "^4.17.2",
     "autoprefixer": "^10.4.15",
     "eslint-plugin-storybook": "^0.6.13",
