--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL='mysql://vsbdj5rcayg2k7r5cvyy:pscale_pw_2lr7PZjvpenWSKtu5QeqVWVBeAL5r4IJvQ2KyPgzmXs@aws.connect.psdb.cloud/rate-this?sslaccept=strict'
+DATABASE_URL='mysql://6i6e7ccf8rhpv7p0ksa7:pscale_pw_SS8f6LDTLvhZCbQ9MCoIkAikLXg1uxNYYjbjFkcLBoS@aws.connect.psdb.cloud/rate-this?sslaccept=strict'
 
 NEXTAUTH_SECRET=RATE_THIS_SECRET
 NEXTAUTH_URL=http://localhost:3000/
