--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 DATABASE_URL='mysql://6i6e7ccf8rhpv7p0ksa7:pscale_pw_SS8f6LDTLvhZCbQ9MCoIkAikLXg1uxNYYjbjFkcLBoS@aws.connect.psdb.cloud/rate-this?sslaccept=strict'
 
 NEXTAUTH_SECRET=RATE_THIS_SECRET
-NEXTAUTH_URL=http://localhost:3000/
+NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_SECRET=SOME_SECRETS
 
 GITHUB_ID=a0591a9045f1c3a1d00c
