--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:ci": "jest --ci",
-    "postinstall": "npx prisma generate && npx prisma db push"
+    "postinstall": "npx prisma generate && npx prisma db push",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
